--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /.idea/shelf/Uncommitted_changes_before_Update_at_2025__6__11___4_06__Changes_.xml
 /.idea/workspace.xml
+
+# macOS 시스템 파일 무시
+.DS_Store
