--- a/DevQuest-service/src/main/resources/application.yml
+++ b/DevQuest-service/src/main/resources/application.yml
@@ -32,7 +32,7 @@ gemini:
   base-url: https://generativelanguage.googleapis.com
   api-key: "AIzaSyDJ2t_TcJ7ZwV0AI5AePRiVdUtqhvnvkN4"
 
-  spring:
-    thymeleaf:
-      prefix: classpath:/templates/
-      suffix: .html
+#  spring:
+#    thymeleaf:
+#      prefix: classpath:/templates/
+#      suffix: .html
