--- a/DevQuest-service/src/main/resources/application.yml
+++ b/DevQuest-service/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 remember-me:
   key: dladmldmlzl123
 
+upload:
+  path: /Users/cho/Documents/dev/backend/f_spring/NBE5-6-3-Team04/DevQuest-service/upload/profile
+
 spring:
   application:
     name: NBE5-6-3-Team04
@@ -16,13 +19,13 @@ spring:
 
   datasource:
     url: jdbc:mysql://localhost:3306/todoRpg
-    username: bm
-    password: 123qwe!@#
+    username: root
+    password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
-      ddl-auto: none  # 개발 중엔 update 권장
+      ddl-auto: update  # 개발 중엔 update 권장
     show-sql: true
     properties:
       hibernate:
@@ -30,4 +33,4 @@ spring:
 
 gemini:
   base-url: https://generativelanguage.googleapis.com
-  api-key: "AIzaSyDJ2t_TcJ7ZwV0AI5AePRiVdUtqhvnvkN4"
+  api-key: "AIzaSyDfNtJhfDdZAuqDr83VuUucHSKTJRfhP2A"
