(0615) chore: #3 JWT 및 보안 관련 의존성 및 설정

--- a/DevQuest-service/src/main/resources/application.yml
+++ b/DevQuest-service/src/main/resources/application.yml
@@ -4,6 +4,11 @@ remember-me:
 upload:
   path: ${UPLOAD_PATH}
 
+jwt:
+  secret: ${JWT_SECRET}
+  access-expiration: ${JWT_ACCESS_EXPIRATION}
+  refresh-expiration: ${JWT_REFRESH_EXPIRATION}
+
 spring:
   application:
     name: NBE5-6-3-Team04
