--- a/DevQuest-mail/src/main/resources/application.yml
+++ b/DevQuest-mail/src/main/resources/application.yml
@@ -1,7 +1,44 @@
-spring:
-  application:
-    name: DevQuest-mail
+app:
+  domain: http://localhost:8080
 
 server:
   port: 8081
+  servlet:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+
+logging:
+  level:
+    root: info
+    org:
+      hibernate:
+        SQL: info
+        type:
+          descriptor:
+            sql: info
+      springframework:
+        cloud:
+          openfeign: info
+        client:
+          RestTemplate: info
+        security: info
+
+spring:
+  mail:
+    host: smtp.gmail.com
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+  application:
+    name: DevQuest-mail
+
+
 
